--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -290,7 +290,7 @@ h2, h3 { color: #48bdfe; }
 
 .section-docs .sidebar-nav-child.active a:hover, .section-docs .sidebar-nav-child.active a:focus, .section-docs .sidebar-nav-child.active a:active { color: #6c757d; }
 
-@media (min-width: 768px) { .sidebar { padding-bottom: 1.5rem; margin-bottom: 1.5rem; border-bottom: none; padding-bottom: 0; margin-bottom: 0; } }
+@media (min-width: 768px) { .sidebar { /*position: fixed;*/ /*        width: 260px; overflow-y: auto; overflow-x: hidden;*/ padding-bottom: 1.5rem; margin-bottom: 1.5rem; border-bottom: none; padding-bottom: 0; margin-bottom: 0; } }
 
 .page-box { border: 1px solid #e9ecef; box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075); border-radius: 0.25rem; }
 
